	  If version == null:
	  	if the associated getUri is *unversioned*, then the obtained ontology is the latest version
	  	if it is *versioned*, then that version is retrieved.
	  If version != null:
	  	then, that version is retrieved.
	- The above change done during the enabling of the VINE tool in the portal. 
	
2009-08-27  1.5.0.alpha11
	- RegisteredOntologyInfo, EntityInfo: Removed transient field 'code' -- client should use its own mechanism.
	
	
2009-08-26  1.5.0.alpha11
	VINE: Adding elements to incorporate VINE functionality.
	- package org.mmisw.iserver.gwt.client.rpc.vine
		RelationInfo, Mapping
	- Server: List<RelationInfo> getVineRelationInfos()
	- TODO: Define precise info required for a mapping from this server side,
	perhaps separating the attributes of a RelationInfo from the mapping; just use
	the relation URI to link the two.
	
	More updates:  (still incomplete)
	- new MappingOntologyCreator (similar to VocabCreator)
	- enabling MappingDataCreationInfo processing



2009-08-25  1.5.0.alpha10
	- Server.getEntities(RegisteredOntologyInfo): adjustments for proper way to get the
	  ontology. This operation is only being used by the Vine app, which I'm updating now.

2009-08-25  1.5.0.alpha9
	issue #148: "Need property to capture "creator/author of original source vocabulary""
	- MdHelper: 
		- changed label and tooltip for hasCreator: 
		     "Ontology creator" ->  "..person that created the ontology representation"
		- added OmvMmi.hasContentCreator with label and tooltip: 
			"Content creator" -> "..person that created the contents reflected in the ontology"

2008-08-24  1.5.0.alpha8
	Fixed issue #161 "New version forces upload of local file"
	- CreateOntologyInfo.PriorOntologyInfo: new class to hold necessary info for when a new
	  version is to be created/registered
	- Server.createOntology: when tempOntologyInfo == null, it uses createOntologyInfo.getPriorOntologyInfo()