@@ -13,6 +13,13 @@ $Id$
 	  	then, that version is retrieved.
 	- The above change done during the enabling of the VINE tool in the portal. 
 	
+	- MappingOntologyCreator: Indicate VINE as the engineering tool:
+		ont.addProperty(Omv.usedOntologyEngineeringTool, OmvMmi.vine);
+	
+	- VocabCreator: Indicate Voc2RDF as the engineering tool:
+		ont.addProperty(Omv.usedOntologyEngineeringTool, OmvMmi.voc2rdf);
+	
+	
 2009-08-27  1.5.0.alpha11
 	- RegisteredOntologyInfo, EntityInfo: Removed transient field 'code' -- client should use its own mechanism.
 	
